{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 27,
  "lineage": "4f4c1470-f9ea-21a1-f28b-97a250234b46",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "debian_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-095f312bef9bfe5b1",
            "arn": "arn:aws:ec2:us-east-1:632264961236:instance/i-0d2e47fb8eb222858",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2e47fb8eb222858",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TF-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0168a0e5ea612be3c",
            "private_dns": "ip-10-0-1-43.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.43",
            "public_ip": "44.192.131.252",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04491442f98d5f1a8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aacf683d5c52c677",
            "tags": {
              "Name": "debian-ansible-target"
            },
            "tags_all": {
              "Name": "debian-ansible-target"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07cae4e5b0fa22e6c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.TF_key",
            "aws_security_group.TF_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.dev_vpc",
            "data.aws_ami.debian"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632264961236:internet-gateway/igw-0b7aa2111828380ac",
            "id": "igw-0b7aa2111828380ac",
            "owner_id": "632264961236",
            "tags": {
              "Name": "TF_IGW"
            },
            "tags_all": {
              "Name": "TF_IGW"
            },
            "vpc_id": "vpc-0e6a0d2b5d56af2f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TF_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632264961236:route-table/rtb-0db22c4a7eec925db",
            "id": "rtb-0db22c4a7eec925db",
            "owner_id": "632264961236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7aa2111828380ac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TF_route_table"
            },
            "tags_all": {
              "Name": "TF_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6a0d2b5d56af2f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TF_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632264961236:security-group/sg-07cae4e5b0fa22e6c",
            "description": "Allow SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07cae4e5b0fa22e6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg",
            "name_prefix": "",
            "owner_id": "632264961236",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh_sg"
            },
            "tags_all": {
              "Name": "ssh_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e6a0d2b5d56af2f4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632264961236:subnet/subnet-0aacf683d5c52c677",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aacf683d5c52c677",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "632264961236",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TF-subnet"
            },
            "tags_all": {
              "Name": "TF-subnet"
            },
            "vpc_id": "vpc-0e6a0d2b5d56af2f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:632264961236:vpc/vpc-0e6a0d2b5d56af2f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05b8677ca60399d16",
            "default_route_table_id": "rtb-02f94bf80faacf512",
            "default_security_group_id": "sg-0940b7efce771a1fe",
            "dhcp_options_id": "dopt-0cbf741bef47bc13c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e6a0d2b5d56af2f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f94bf80faacf512",
            "owner_id": "632264961236",
            "tags": {
              "Name": "TF VPC"
            },
            "tags_all": {
              "Name": "TF VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}